refactor: Party entity 필드 추가
- 모든 컬럼을 필드 매핑
- Set.of() 대신 Collections.emptySet()으로 변경